Gradle build at root level and other reorg

--- a/addon/src/plugin.cfg
+++ b/addon/src/plugin.cfg
@@ -1,10 +1,10 @@
 ;
-; © 2026-present https://github.com/cengiz-pz
+; © 2026-present https://github.com/<<GitHubUsername>>
 ;
 [plugin]
 
 name="@pluginNodeName@"
 description="What does this plugin do?"
-author="YourName"
+author="<<AuthorName>>"
 version="@pluginVersion@"
 script="@pluginName@.gd"
