--- a/ios/config/config.properties
+++ b/ios/config/config.properties
@@ -7,3 +7,4 @@ frameworks=Foundation.framework,Network.framework
 embedded_frameworks=
 flags=-ObjC
 dependencies=
+#dependencies=https://github.com/googleads/swift-package-manager-google-mobile-ads.git|12.14.0|GoogleMobileAds,...
