--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -10,7 +10,9 @@ body:
     options:
     - label: I have searched the existing open and closed issues
       required: true
-    - label: I have searched the existing discussions
+    - label: I have searched the discussions
+      required: true
+    - label: I have starred the repository
       required: true
 - type: textarea
   attributes:
