--- a/ios/config/config.properties
+++ b/ios/config/config.properties
@@ -6,5 +6,8 @@ platform_version=14.3
 frameworks=Foundation.framework,Network.framework
 embedded_frameworks=
 flags=-ObjC
-dependencies=
-#dependencies=https://github.com/googleads/swift-package-manager-google-mobile-ads.git|12.14.0|GoogleMobileAds,...
+# Configure dependencies as follows:
+#dependency.<ProductName>=<URL>|<minimumVersion>
+# Examples:
+#dependency.FirebaseCore=https://github.com/firebase/firebase-ios-sdk.git|12.0.0
+#dependency.FirebaseAuth=https://github.com/firebase/firebase-ios-sdk.git|12.0.0
